# fpga_helpers

./: .gitignore  AUTHORS  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  ChangeLog  Makefile  Makefile.am  Makefile.debian  NEWS  README  README.md  bootstrap  configure.ac  setup.py
data/boards/: avnet_s6micro.yaml  digilent_atlys.yaml  gaisler_xc6s.yaml  template.txt  terasic_de0nano.yaml  xilinx_ml605.yaml  xilinx_sp601.yaml  xilinx_xm105_on_sp601.yaml
data/tools/program/flashpro/: flashpro5_fpga.tcl  flashpro5_spi.tcl  program.tcl
data/tools/program/impact/: bpi  detect  fpga  mcs_bpi  mcs_spi  mcs_xcf  spi  unlock
data/tools/synthesis/: Makefile  ise.tcl  libero-soc.tcl  options.tcl  quartus2.tcl  synthesis.tcl  vivado.tcl
debian/: changelog  control
doc/: BUILD  BUILD.md  HACKING  HACKING.md  Makefile.am  README.md  RESOURCES  RESOURCES.md  resources.md  userguide.md  userguide_en.md  userguide_es.md
doc/images/: images.fodg
doc/tutorial/: Makefile  Makefile.am  tutorial.tex
docker/: Dockerfile  README.md  build.sh  run.sh
examples/10M08/: Makefile  options.tcl
examples/avnet_s6micro/: core_file.vhdl  options.tcl  package_file.vhdl  top.vhdl  top_file.vhdl
examples/de10nano/: options.tcl
examples/max10eval/: max10eval.tcl  options.tcl
examples/mpf300eval/: options.tcl
examples/multi/: check.sh  options.tcl  run.sh
examples/s6micro/: Makefile  check.sh  options.tcl
examples/zybo/: options.tcl  zybo.xdc
fpgahelpers/: README.md  __init__.py  common.py  database.py  fpga_deps.py  fpga_prog.py  fpga_synt.py  fpga_wizard.py
fpgahelpers/tcl/: programming.tcl  synthesis.tcl
helpers/: Makefile.am  fpga_lib.py  fpga_make_syn.py  fpga_prepare.sh  fpga_prog.py
helpers/tcl/: Makefile  fpga.tcl  ise_cfg.tcl  quartus2_cfg.tcl  vivado_cfg.tcl
package/: Makefile
package/debian/: changelog  control  copyright
src/: Makefile.am  README.md  database.py  fpga_deps.py  fpga_helpers.py  fpga_make_syn.py  fpga_pads.py  fpga_prog.py  fpga_setup.sh  fpga_synt.py  fpga_tree.py  fpga_wizard.py
tcl/: Makefile  Makefile.am  README.md
test/: Makefile
test/core/: check.sh  core_file.vhdl  package_file.vhdl
test/fake-project/: blocks.fodg
test/fake-project/FPGA/: top.vhdl
test/fake-project/core/: Makefile  core.vhdl
test/fake-project/lib1/: Makefile  com1_pkg1_lib1.vhdl  com1_pkg2_lib1.vhdl  com2_pkg1_lib1.vhdl  com3_pkg1_lib1.vhdl  pkg1_lib1.vhdl  pkg2_lib1.vhdl
test/fake-project/lib2/: Makefile  com1_pkg1_lib2.vhdl  pkg1_lib2.vhdl
test/fake-project/lib3/: Makefile  com1_pkg1_lib3.vhdl  pkg1_lib3.vhdl
test/fpga_deps/: README  check.sh  lib1_pkg1.vhdl  lib1_pkg1_com2.vhdl  lib1_pkg2.vhdl  lib1_pkg2_com3.vhdl  lib2_pkg1.vhdl  lib2_pkg1_com1.vhdl  lib2_pkg1_com4.vhdl  lib2_pkg3.vhdl  lib2_pkg3_com5.vhdl  top.vhdl
test/fpga_prog/: README.md  s6micro.bit
test/tcl/: Makefile  options.tcl  top_file.vhdl
